# robstride_motor

./: .gitignore  .syncignore  README.md
docker/: Dockerfile  compose.yaml
ros_ws/: find_motors.py
ros_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/custom_interfaces/action/: Homing.action  MoveToPosition.action  RecordTrajectory.action  ReplayTrajectory.action  SetVelocity.action  SimulateTrajectory.action
ros_ws/src/custom_interfaces/msg/: CurrentCommand.msg  JointCommand.msg  MotorCommand.msg  MotorFault.msg  MotorState.msg  OperationCommand.msg  PositionCSPCommand.msg  PositionPPCommand.msg  VelocityCommand.msg
ros_ws/src/custom_interfaces/srv/: CaptureHomingPose.srv  EnableMimicMotors.srv  EnableMotor.srv  GetCanConfig.srv  Help.srv  MotorParam.srv  ReadParam.srv  RecordArmPose.srv  SetActiveReport.srv  SetArmPose.srv  SetCanConfig.srv  SetMimicMode.srv  SetMimicParams.srv  SetMimicTarget.srv  SetRunMode.srv  SetZeroPosition.srv  StopTrajectoryRecording.srv  TrimTrajectory.srv  WriteParam.srv
ros_ws/src/damiao_p/: package.xml  setup.cfg  setup.py
ros_ws/src/damiao_p/config/: config.toml
ros_ws/src/damiao_p/damiao_p/: __init__.py  comms.py  j4310_2ec.py  motor_base.py  motor_node.py
ros_ws/src/damiao_p/launch/: damiao.launch.py
ros_ws/src/featherbot_bringup/: CMakeLists.txt  package.xml
ros_ws/src/featherbot_bringup/launch/: gazebo.launch.py
ros_ws/src/featherbot_description/: CMakeLists.txt  package.xml
ros_ws/src/featherbot_description/launch/: featherbot_description_launch.launch.py
ros_ws/src/featherbot_description/meshes/: Camera_1.stl  Camera_1_Camera_1_convex_hull.stl  Drive_Bracket_1.stl  Drive_Bracket_1_Drive_Bracket_1_convex_hull.stl  Drive_Bracket_2.stl  Drive_Bracket_2_Drive_Bracket_2_convex_hull.stl  Drive_Bracket_3.stl  Drive_Bracket_3_Drive_Bracket_3_convex_hull.stl  Drive_Wheel_1.stl  Drive_Wheel_1_Drive_Wheel_1_convex_hull.stl  Drive_Wheel_2.stl  Drive_Wheel_2_Drive_Wheel_2_convex_hull.stl  Drive_Wheel_3.stl  Drive_Wheel_3_Drive_Wheel_3_convex_hull.stl  Neck_rotation_1.stl  Neck_rotation_1_Neck_rotation_1_convex_hull.stl  Torso_1_Torso_1_convex_hull.stl  base_link_base_link_convex_hull.stl  end_effectorL_1_end_effectorL_1_convex_hull.stl  end_effectorR_1_end_effectorR_1_convex_hull.stl  link_EpL_WwL_1.stl  link_EpL_WwL_1_link_EpL_WwL_1_convex_hull.stl  link_EpR_WwR_1.stl  link_EpR_WwR_1_link_EpR_WwR_1_convex_hull.stl  link_SpL_SrL_1_link_SpL_SrL_1_convex_hull.stl  link_SpR_SrR_1_link_SpR_SrR_1_convex_hull.stl  link_SrL_SwL_1.stl  link_SrL_SwL_1_link_SrL_SwL_1_convex_hull.stl  link_SrR_SwR_1.stl  link_SrR_SwR_1_link_SrR_SwR_1_convex_hull.stl  link_SwL_EpL_1_link_SwL_EpL_1_convex_hull.stl  link_SwR_EpR_1_link_SwR_EpR_1_convex_hull.stl  link_WpL_WrL_1.stl  link_WpL_WrL_1_link_WpL_WrL_1_convex_hull.stl  link_WpR_WrR_1.stl  link_WpR_WrR_1_link_WpR_WrR_1_convex_hull.stl  link_WwL_WpL_1.stl  link_WwL_WpL_1_link_WwL_WpL_1_convex_hull.stl  link_WwR_WpR_1.stl  link_WwR_WpR_1_link_WwR_WpR_1_convex_hull.stl
ros_ws/src/featherbot_description/urdf/: featherbot.gazebo  featherbot.xacro  materials.xacro
ros_ws/src/featherbot_ros2_control/: CMakeLists.txt  featherbot_ros2_control_plugin.xml  package.xml
ros_ws/src/featherbot_ros2_control/config/: controllers.yaml
ros_ws/src/featherbot_ros2_control/include/featherbot_ros2_control/: featherbot_hardware_interface.hpp
ros_ws/src/featherbot_ros2_control/ros2_control/: featherbot.ros2_control.xacro
ros_ws/src/featherbot_ros2_control/src/: featherbot_hardware_interface.cpp
ros_ws/src/mimic/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/mimic/config/: config.toml  left_s_right_t.toml  mimic.toml  right_s_left_t.toml
ros_ws/src/mimic/launch/: left_s_right_t.launch.py  mimic.launch.py  right_s_left_t.launch.py
ros_ws/src/mimic/mimic/: mimic_node.py  transforms.py
ros_ws/src/mimic_sim/: package.xml  setup.cfg  setup.py
ros_ws/src/mimic_sim/config/: config.toml  sim_base_brackets.toml  sim_base_wheels.toml  sim_left_arm.toml  sim_neck.toml  sim_right_arm.toml  sim_torso.toml
ros_ws/src/mimic_sim/launch/: mimic_sim.launch.py  sim_motors.launch.py
ros_ws/src/mimic_sim/mimic_sim/: mimic_sim_node.py  sim_motor_node.py
ros_ws/src/remote_joystick/: package.xml  setup.cfg  setup.py
ros_ws/src/remote_joystick/config/: config.toml  local.toml  remote.toml
ros_ws/src/remote_joystick/launch/: local.launch.py  remote.launch.py  remote_joystick.launch.py
ros_ws/src/remote_joystick/remote_joystick/: remote_joystick_node.py
ros_ws/src/robstride_p/: package.xml  setup.cfg  setup.py
ros_ws/src/robstride_p/config/: base_and_neck.toml  config.toml  left_arm.toml  plotjuggler_motor_pos_plot.xml  plotljuggler_motor_pos_plot_1.xml  right_arm.toml
ros_ws/src/robstride_p/launch/: base_and_neck.launch.py  left_arm.launch.py  motors.launch.py  right_arm.launch.py
ros_ws/src/robstride_p/robstride_p/: comms.py  (+7 more)
ros_ws/src/teleop/: package.xml  setup.py
ros_ws/src/teleop/config/: config.toml
ros_ws/src/teleop/launch/: teleop.launch.py
ros_ws/src/teleop/teleop/: joy_reader.py  teleop_node.py
ros_ws/src/trajectory_tracker/: README.md  package.xml  setup.py
(+16 files in other folders)
